[gd_scene load_steps=12 format=3 uid="uid://t57w1pfw71gt"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_d6dk6"]
[ext_resource type="FontFile" uid="uid://b3cvj5rquooyu" path="res://Assets/Fonts/Sniglet-ExtraBold.ttf" id="2"]
[ext_resource type="Texture2D" uid="uid://rpuexw66yk4" path="res://Assets/Menu/trolls.png" id="2_x7uu1"]
[ext_resource type="Texture2D" uid="uid://u2c80jsts87i" path="res://Assets/Ogre3/Idle/Idle_000.png" id="3"]
[ext_resource type="Texture2D" uid="uid://6jsvw4bll1nb" path="res://Assets/Hero/Idle/Idle_000.png" id="4"]
[ext_resource type="AudioStream" uid="uid://caqhjqj5jgbb2" path="res://Assets/Sound/Menu.mp3" id="7"]
[ext_resource type="Texture2D" uid="uid://ca7n5uktr48ta" path="res://Assets/Fireball/Fireball.png" id="8"]
[ext_resource type="Texture2D" uid="uid://b8tp4rjxb77ky" path="res://Assets/CommonObjects/heart.png" id="9"]
[ext_resource type="FontFile" uid="uid://dkaujrdvyg0wr" path="res://Assets/Fonts/BalsamiqSans-Bold.ttf" id="11_obvkp"]
[ext_resource type="Texture2D" uid="uid://b2mwjgpkajbe" path="res://addons/ActionIcon/Keyboard/Blank.png" id="11_tku4s"]
[ext_resource type="Script" path="res://addons/ActionIcon/ActionIcon.gd" id="12_f53p2"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_d6dk6")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1928.0
offset_bottom = 1088.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_x7uu1")
expand_mode = 1
stretch_mode = 4

[node name="Version" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 1805.0
offset_top = 9.0
offset_right = 1904.0
offset_bottom = 35.0
text = "VERSION"

[node name="Title" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 440.0
offset_top = 193.0
offset_right = 1448.0
offset_bottom = 496.0
theme_override_colors/font_color = Color(0, 0.305882, 0.309804, 1)
theme_override_colors/font_outline_color = Color(0, 0.113725, 0.309804, 1)
theme_override_constants/outline_size = 72
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 240
text = "TITLE"
horizontal_alignment = 1

[node name="Copyright" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 16.0
offset_top = 10.0
offset_right = 367.0
offset_bottom = 36.0
text = "COPYRIGHT"

[node name="Keys" type="Panel" parent="Menu"]
layout_mode = 0
offset_left = 127.0
offset_top = 697.0
offset_right = 495.0
offset_bottom = 958.0

[node name="LeftKeyDesc" type="Label" parent="Menu/Keys"]
layout_mode = 0
offset_left = 56.0
offset_top = 110.0
offset_right = 178.0
offset_bottom = 151.0
theme_override_fonts/font = ExtResource("11_obvkp")
theme_override_font_sizes/font_size = 18
text = "LEGEND_RUN"

[node name="PauseKeyDesc" type="Label" parent="Menu/Keys"]
layout_mode = 0
offset_left = 160.0
offset_top = 217.0
offset_right = 300.0
offset_bottom = 258.0
theme_override_fonts/font = ExtResource("11_obvkp")
theme_override_font_sizes/font_size = 18
text = "LEGEND_PAUSE"

[node name="RightKeyDesc" type="Label" parent="Menu/Keys"]
layout_mode = 0
offset_left = 216.0
offset_top = 17.0
offset_right = 355.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("11_obvkp")
theme_override_font_sizes/font_size = 18
text = "LEGEND_RIGHT"

[node name="UpKeyDesc" type="Label" parent="Menu/Keys"]
layout_mode = 0
offset_left = 56.0
offset_top = 64.0
offset_right = 165.0
offset_bottom = 105.0
theme_override_fonts/font = ExtResource("11_obvkp")
theme_override_font_sizes/font_size = 18
text = "LEGEND_CLIMB_UP"

[node name="RunKeyDesc" type="Label" parent="Menu/Keys"]
layout_mode = 0
offset_left = 56.0
offset_top = 17.0
offset_right = 183.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("11_obvkp")
theme_override_font_sizes/font_size = 18
text = "LEGEND_LEFT"

[node name="FightKeyDesc" type="Label" parent="Menu/Keys"]
layout_mode = 0
offset_left = 217.0
offset_top = 110.0
offset_right = 365.0
offset_bottom = 151.0
theme_override_fonts/font = ExtResource("11_obvkp")
theme_override_font_sizes/font_size = 18
text = "LEGEND_ATTACK"

[node name="SpaceKeyDesc" type="Label" parent="Menu/Keys"]
layout_mode = 0
offset_left = 60.0
offset_top = 158.0
offset_right = 193.0
offset_bottom = 199.0
theme_override_fonts/font = ExtResource("11_obvkp")
theme_override_font_sizes/font_size = 18
text = "LEGEND_JUMP"

[node name="TabKeyDesc" type="Label" parent="Menu/Keys"]
layout_mode = 0
offset_left = 217.0
offset_top = 158.0
offset_right = 468.0
offset_bottom = 199.0
theme_override_fonts/font = ExtResource("11_obvkp")
theme_override_font_sizes/font_size = 18
text = "LEGEND_SHOOT_FIREBALLS"

[node name="DownKeyDesc" type="Label" parent="Menu/Keys"]
layout_mode = 0
offset_left = 216.0
offset_top = 63.0
offset_right = 423.0
offset_bottom = 104.0
theme_override_fonts/font = ExtResource("11_obvkp")
theme_override_font_sizes/font_size = 18
text = "LEGEND_CLIMB_DOWN"

[node name="MoveLeft" type="TextureRect" parent="Menu/Keys"]
layout_mode = 0
offset_left = 9.0
offset_top = 5.0
offset_right = 57.0
offset_bottom = 53.0
texture = ExtResource("11_tku4s")
expand_mode = 1
stretch_mode = 5
script = ExtResource("12_f53p2")
action_name = &"ui_left"
favor_mouse = false

[node name="MoveRight" type="TextureRect" parent="Menu/Keys"]
layout_mode = 0
offset_left = 169.0
offset_top = 5.0
offset_right = 217.0
offset_bottom = 53.0
texture = ExtResource("11_tku4s")
expand_mode = 1
stretch_mode = 5
script = ExtResource("12_f53p2")
action_name = &"ui_right"
favor_mouse = false

[node name="MoveUp" type="TextureRect" parent="Menu/Keys"]
layout_mode = 0
offset_left = 10.0
offset_top = 51.0
offset_right = 58.0
offset_bottom = 99.0
texture = ExtResource("11_tku4s")
expand_mode = 1
stretch_mode = 5
script = ExtResource("12_f53p2")
action_name = &"ui_up"
favor_mouse = false

[node name="MoveDown" type="TextureRect" parent="Menu/Keys"]
layout_mode = 0
offset_left = 170.0
offset_top = 51.0
offset_right = 218.0
offset_bottom = 99.0
texture = ExtResource("11_tku4s")
expand_mode = 1
stretch_mode = 5
script = ExtResource("12_f53p2")
action_name = &"ui_down"
favor_mouse = false

[node name="Run" type="TextureRect" parent="Menu/Keys"]
layout_mode = 0
offset_left = 10.0
offset_top = 98.0
offset_right = 58.0
offset_bottom = 146.0
texture = ExtResource("11_tku4s")
expand_mode = 1
stretch_mode = 5
script = ExtResource("12_f53p2")
action_name = &"ui_run"
favor_mouse = false

[node name="Attack" type="TextureRect" parent="Menu/Keys"]
layout_mode = 0
offset_left = 171.0
offset_top = 98.0
offset_right = 219.0
offset_bottom = 146.0
texture = ExtResource("11_tku4s")
expand_mode = 1
stretch_mode = 5
script = ExtResource("12_f53p2")
action_name = &"ui_attack"
favor_mouse = false

[node name="Jump" type="TextureRect" parent="Menu/Keys"]
layout_mode = 0
offset_left = 10.0
offset_top = 146.0
offset_right = 58.0
offset_bottom = 194.0
texture = ExtResource("11_tku4s")
expand_mode = 1
stretch_mode = 5
script = ExtResource("12_f53p2")
action_name = &"ui_jump"
favor_mouse = false

[node name="Shoot" type="TextureRect" parent="Menu/Keys"]
layout_mode = 0
offset_left = 172.0
offset_top = 145.0
offset_right = 220.0
offset_bottom = 193.0
texture = ExtResource("11_tku4s")
expand_mode = 1
stretch_mode = 5
script = ExtResource("12_f53p2")
action_name = &"ui_shoot"
favor_mouse = false

[node name="Pause" type="TextureRect" parent="Menu/Keys"]
layout_mode = 0
offset_left = 114.0
offset_top = 205.0
offset_right = 162.0
offset_bottom = 253.0
texture = ExtResource("11_tku4s")
expand_mode = 1
stretch_mode = 5
script = ExtResource("12_f53p2")
action_name = &"ui_pause"
favor_mouse = false

[node name="Legend" type="Panel" parent="Menu"]
layout_mode = 0
offset_left = 1402.0
offset_top = 731.0
offset_right = 1791.0
offset_bottom = 936.0

[node name="YouImage" type="TextureRect" parent="Menu/Legend"]
layout_mode = 0
offset_left = -15.0
offset_top = 3.0
offset_right = 145.0
offset_bottom = 115.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 6

[node name="BossImage" type="TextureRect" parent="Menu/Legend"]
layout_mode = 0
offset_left = -17.0
offset_top = 54.0
offset_right = 124.0
offset_bottom = 170.0
scale = Vector2(0.9, 0.9)
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 6

[node name="YouDesc" type="Label" parent="Menu/Legend"]
layout_mode = 0
offset_left = 72.0
offset_top = 26.0
offset_right = 147.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("11_obvkp")
theme_override_font_sizes/font_size = 18
text = "LEGEND_PLAYER"

[node name="FireballImage" type="TextureRect" parent="Menu/Legend"]
layout_mode = 0
offset_left = 17.0
offset_top = 161.0
offset_right = 60.0
offset_bottom = 204.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("8")
expand_mode = 1
stretch_mode = 6

[node name="HeartImage" type="TextureRect" parent="Menu/Legend"]
layout_mode = 0
offset_left = 58.0
offset_top = 164.0
offset_right = 102.0
offset_bottom = 198.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("9")
expand_mode = 1
stretch_mode = 6

[node name="PowerUpDesc" type="Label" parent="Menu/Legend"]
layout_mode = 0
offset_left = 97.0
offset_top = 165.0
offset_right = 223.0
offset_bottom = 228.0
theme_override_fonts/font = ExtResource("11_obvkp")
theme_override_font_sizes/font_size = 18
text = "LEGEND_POWERUPS"

[node name="BossesDesc" type="Label" parent="Menu/Legend"]
layout_mode = 0
offset_left = 89.0
offset_top = 99.0
offset_right = 366.0
offset_bottom = 140.0
theme_override_fonts/font = ExtResource("11_obvkp")
theme_override_font_sizes/font_size = 18
text = "LEGEND_BOSS"

[node name="PlayButton" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = -1
offset_left = 839.0
offset_top = 735.0
offset_right = 1082.0
offset_bottom = 822.0
grow_horizontal = 2
focus_next = NodePath("../ResetButton")
theme_override_colors/font_color = Color(0, 0.74902, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.878431, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.878431, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0.878431, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0.25098, 0, 1)
theme_override_constants/outline_size = 48
theme_override_fonts/font = ExtResource("11_obvkp")
theme_override_font_sizes/font_size = 50
text = "BTN_PLAY"
flat = true

[node name="ResetButton" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.027
offset_left = 889.0
offset_top = 878.0
offset_right = 1037.0
offset_bottom = 916.0
grow_horizontal = 2
focus_next = NodePath("../PlayButton")
theme_override_colors/font_color = Color(0.596078, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.819608, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.819608, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.819608, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.403922, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("11_obvkp")
theme_override_font_sizes/font_size = 32
text = "BTN_RESET"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Menu"]
stream = ExtResource("7")
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="Menu/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menu/ResetButton" to="." method="_on_ResetButton_pressed"]
